--- a/pom.xml
+++ b/pom.xml
@@ -299,11 +299,6 @@
                 <version>${aspectj.version}</version>
             </dependency>
             <dependency>
-                <groupId>cglib</groupId>
-                <artifactId>cglib</artifactId>
-                <version>2.2.2</version>
-            </dependency>
-            <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-redis</artifactId>
                 <version>1.6.0.RELEASE</version>
@@ -362,10 +357,15 @@
             </dependency>
 
             <!-- Byte Code Manipulation Libraries -->
-            <dependency>
+            <!--<dependency>
                 <groupId>cglib</groupId>
                 <artifactId>cglib-nodep</artifactId>
                 <version>2.1_3</version>
+            </dependency>-->
+            <dependency>
+                <groupId>cglib</groupId>
+                <artifactId>cglib</artifactId>
+                <version>2.2.2</version>
             </dependency>
             <dependency>
                 <groupId>asm</groupId>
