--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.kzaza</groupId>
+    <groupId>com.kza</groupId>
     <artifactId>ripple</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -150,7 +150,7 @@
         <dependencies>
             <!-- Rsite Libraries -->
             <dependency>
-                <groupId>com.kzaza</groupId>
+                <groupId>com.kza</groupId>
                 <artifactId>r-common</artifactId>
                 <version>${project.version}</version>
             </dependency>
