--- a/rsite-admin/pom.xml
+++ b/rsite-admin/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <artifactId>ripple</artifactId>
-        <groupId>com.kzaza</groupId>
+        <groupId>com.kza</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -48,7 +48,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.kzaza</groupId>
+            <groupId>com.kza</groupId>
             <artifactId>r-common</artifactId>
         </dependency>
 
