--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,11 @@
                 <artifactId>guava</artifactId>
                 <version>18.0</version>
             </dependency>
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>2.8.2</version>
+            </dependency>
 
             <!-- Cache Libraries -->
             <dependency>
