--- a/rcommon/pom.xml
+++ b/rcommon/pom.xml
@@ -169,5 +169,10 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.xerial.snappy</groupId>
+            <artifactId>snappy-java</artifactId>
+            <version>1.1.2</version>
+        </dependency>
     </dependencies>
 </project>
